// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonUI SNAPSHOTS TESTS gray ButtonUI should not be changed 1`] = `
<button
  class="jsx-209216300 button button_small button button"
>
  Серая кнопка
</button>
`;

exports[`ButtonUI SNAPSHOTS TESTS lightRed ButtonUI should not be changed 1`] = `
<button
  class="jsx-1710444260 button button_large button button"
>
  Красная кнопка
</button>
`;
